# ms_ai_agent_tool

./: .gitignore  pyproject.toml  requirements.txt
src/ms_ai_agent_sample/core_modules/: agent_util.py
src/ms_ai_agent_sample/tool_modules/: file_tools.py
src/ms_ai_agent_tool/core_modules/: agent_util.py
src/ms_ai_agent_tool/log_modules/: log_settings.py
src/ms_ai_agent_tool/mcp_modules/: file_tools.py  mcp_server.py
src/ms_ai_agent_tool/tool_modules/: file_tools.py
